[package]
name = "gm8emu-wasm"
version = "0.1.0"
authors = ["DapperMink <quentinjanuelkij@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
gm8emulator = { path = "../../OpenGMK/gm8emulator" }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
web-sys = { version = "0.3.56", features = [
    "CanvasRenderingContext2d",
    "Window",
    "ImageData",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
serde = "1.0.136"
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
opt-level = 3
